--- a/cpp/{{ cookiecutter.project_name }}/meson.build
+++ b/cpp/{{ cookiecutter.project_name }}/meson.build
@@ -5,26 +5,72 @@ project(
         default_options : ['warning_level=everything', 'cpp_std={{ cookiecutter.cpp_version }}']
 )
 
+# Configuration variables
+# -----------------------
+cc = meson.get_compiler('cpp')
 dependencies = []
+include_dirs = []
+override_options = []
+cpp_args = []
+link_args = []
 
-{% if cookiecutter.min_boost_version != 'na' -%}
+{% if cookiecutter.include_python_extension != 'false' -%}
+# Include Python dependency
+# -------------------------
+py = import('python')
+py_installation = py.find_installation(
+        pure: false,
+        modules: [{% if cookiecutter.include_python_extension == 'true_with_numpy' -%}'numpy'{%- endif %}]
+)
+dependencies += [py_installation.dependency()]
+# Compile and include python C extension
+{% if cookiecutter.include_python_extension == 'true_with_numpy' -%}
+py_numpy_include_dir = run_command(
+        py_installation.full_path(),
+        ['-c', 'import numpy; print(numpy.get_include())'],
+        check: true
+).stdout().strip()
+include_dirs += include_directories(py_numpy_include_dir)
+{%- endif %}
+{%- endif %}
+
+{% if cookiecutter.boost_version != 'na' -%}
 # Include boost dependency
 # ------------------------
+boost_py_version_suffix = py_installation.language_version().replace('.', '')  # Get major ver followed by minor ver, no dot in between. 
+boost_static = true
 boost_dep = dependency(
         'boost',
-        version : '>={{ cookiecutter.min_boost_version }}',
-        modules : ['container', 'filesystem', 'iostreams']
+        version : '={{ cookiecutter.boost_version }}',
+        modules : [
+                'container',
+                'filesystem',
+                'iostreams',
+                {% if cookiecutter.include_python_extension != 'false' -%}'python' + boost_py_version_suffix{%- endif %},
+                {% if cookiecutter.include_python_extension == 'true_with_numpy' -%}'numpy' + boost_py_version_suffix{%- endif %},
+        ],
+        static : boost_static
 )
 dependencies += [boost_dep]
+if boost_static
+        # https://stackoverflow.com/questions/4120169/msvc-boostpython-static-linking-to-dll-pyd#comment4448650_4121910
+        # https://stackoverflow.com/a/35440164
+        if cc.get_id() == 'gcc' or cc.get_id() == 'clang'
+                cpp_args += ['-DBOOST_PYTHON_STATIC_LIB', '-DBOOST_NUMPY_STATIC_LIB']
+        elif cc.get_id() == 'msvc'
+                cpp_args += ['/DBOOST_PYTHON_STATIC_LIB', '/DBOOST_NUMPY_STATIC_LIB']
+        else
+                error('Unrecognized compiler')
+        endif
+endif
 {%- endif %}
 
 {% if cookiecutter.include_source_checker -%}
 # Load source checker target
 # --------------------------
-python3 = find_program('python3', required: true)
 source_checker = custom_target(
         'source_checker',
-        command: ['python3', meson.current_source_dir() + '/source_checker.py'],
+        command: [py_installation.full_path(), meson.current_source_dir() + '/source_checker.py'],
         output: ['unused'],
         build_always_stale: true
 )
@@ -33,12 +79,11 @@ source_checker = custom_target(
 {% if cookiecutter.include_doxygen -%}
 # Load doxygen target
 # -------------------
-python3 = find_program('python3', required: true)
 dot = find_program('dot', required: true)
 doxygen = find_program('doxygen', required: true)
 doc_generator = custom_target(
         'doc_generator',
-        command: ['python3', meson.current_source_dir() + '/source_doxygen_runner.py'],
+        command: [py_installation.full_path(), meson.current_source_dir() + '/source_doxygen_runner.py'],
         output : ['docs'],
         build_always_stale: true
 )
@@ -46,6 +91,8 @@ doc_generator = custom_target(
 
 # Configure options
 # -----------------
+base_cpp_args = []
+base_link_args = []
 base_override_options = []
 base_debug_override_options = base_override_options + ['b_lto=false', 'b_ndebug=false', 'debug=true', 'cpp_debugstl=true'] # + ['optimization=0', 'buildtype=debug']
 base_release_override_options = base_override_options + ['b_lto=true', 'b_ndebug=true', 'debug=false', 'cpp_debugstl=false'] # + ['optimization=3', 'buildtype=release']
@@ -53,8 +100,6 @@ cc = meson.get_compiler('cpp')
 if cc.get_id() == 'gcc' or cc.get_id() == 'clang'
         # Configure base arguments for compiling / linking
         # ------------------------------------------------
-        base_cpp_args = []
-        base_link_args = []
         # Disable padding notification warning: Don't care about the compiler padding a struct.
         base_cpp_args += ['-Wno-padded']
         # Disable missing noexcept warning: Don't care that functions can be marked with noexcept.
@@ -97,8 +142,6 @@ if cc.get_id() == 'gcc' or cc.get_id() == 'clang'
         base_release_cpp_args = base_cpp_args
         base_release_link_args = base_link_args
 else
-        base_cpp_args = []
-        base_link_args = []
         base_debug_cpp_args = base_cpp_args + []
         base_debug_link_args = base_link_args + []
         base_release_cpp_args = base_cpp_args + []
@@ -108,17 +151,17 @@ endif
 # ---------------------------------------------
 buildtype = get_option('buildtype')
 if buildtype in ['debug', 'debugoptimized', 'minsize']  # Meson claims these profiles all have debugging info turned on, so enable debugging features
-        override_options = base_debug_override_options
-        cpp_args = base_debug_cpp_args
-        link_args = base_debug_link_args
+        override_options += base_debug_override_options
+        cpp_args += base_debug_cpp_args
+        link_args += base_debug_link_args
 elif buildtype == 'release'
-        override_options = base_release_override_options
-        cpp_args = base_release_cpp_args
-        link_args = base_release_link_args
+        override_options += base_release_override_options
+        cpp_args += base_release_cpp_args
+        link_args += base_release_link_args
 elif buildtype == 'plain'  # Unsure about what to do for plain - keep as-is for now.
-        override_options = []
-        cpp_args = []
-        link_args = []
+        override_options += []
+        cpp_args += []
+        link_args += []
 else
         error('Unknown buildtype: ' + buildtype)
 endif
@@ -133,6 +176,7 @@ cli = executable(
         ],
         {% if cookiecutter.include_source_checker -%}source_checker,{%- endif %}
         dependencies: dependencies,
+        include_directories: include_dirs,
         override_options: override_options,
         cpp_args: cpp_args,
         link_args: link_args
@@ -154,6 +198,7 @@ gtest = executable(
         ],
         {% if cookiecutter.include_source_checker -%}source_checker,{%- endif %}
         dependencies: gtest_dependencies,
+        include_directories: include_dirs,
         override_options: override_options,
         cpp_args: cpp_args,
         link_args: link_args
@@ -164,11 +209,6 @@ test('gtest', gtest)
 {% if cookiecutter.include_python_extension != 'false' -%}
 # Create python extension
 # -----------------------
-py = import('python')
-py_installation = py.find_installation(
-        pure: false,
-        modules: [{% if cookiecutter.include_python_extension == 'true_with_numpy' -%}'numpy'{%- endif %}]
-)
 # Include python files must be listed here for inclusion into generated Python package (py and pyi - will non-python files like JSON also work?).
 py_installation.install_sources(
         [
@@ -180,16 +220,6 @@ py_installation.install_sources(
         preserve_path: true
 )
 # Compile and include python C extension
-{% if cookiecutter.include_python_extension == 'true_with_numpy' -%}
-py_numpy_include_dir = run_command(
-        py_installation.full_path(),
-        ['-c', 'import numpy; print(numpy.get_include())'],
-        check: true
-).stdout().strip()
-py_includes = include_directories(py_numpy_include_dir)
-{%- else -%}
-py_includes = include_directories()
-{%- endif %}
 py_release = py_installation.extension_module(
         'helpers_python_extension',  # Must match name module name in '{{ cookiecutter.project_name }}/math/helpers_python_extension.h'
         [
@@ -199,7 +229,7 @@ py_release = py_installation.extension_module(
         install: true,
         subdir: '{{ cookiecutter.project_name }}/math',  # Must package path in '{{ cookiecutter.project_name }}/math/helpers_python_extension.h'
         dependencies: dependencies,
-        include_directories: py_includes,
+        include_directories: include_dirs,
         override_options: base_release_override_options,
         cpp_args: base_release_cpp_args,
         link_args: base_release_link_args
