--- a/cpp/{{ cookiecutter.project_name }}/pyproject.toml
+++ b/cpp/{{ cookiecutter.project_name }}/pyproject.toml
@@ -3,10 +3,10 @@ name = "{{ cookiecutter.project_name }}"
 version = "0.0.1"
 description = "{{ cookiecutter.project_name }}"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 dependencies = [
-{% if cookiecutter.include_python_extension != 'false' -%}
-    "numpy (>=2.3.3,<3.0.0)",
+{% if cookiecutter.include_python_extension == 'true_with_numpy' -%}
+    "numpy (>=2.0.0,<3.0.0)",
 {%- endif %}
 ]
 
@@ -14,8 +14,8 @@ dependencies = [
 requires = [
     "meson-python",
     "meson>=1.4",
-{% if cookiecutter.include_python_extension != 'false' -%}
-    "numpy (>=2.3.3,<3.0.0)",
+{% if cookiecutter.include_python_extension == 'true_with_numpy' -%}
+    "numpy (>=2.0.0,<3.0.0)",
 {%- endif %}
 ]
 build-backend = "mesonpy"
